App almost done

--- a/app/VeryFunnyGraphs/VeryFunnyGraphs.csproj
+++ b/app/VeryFunnyGraphs/VeryFunnyGraphs.csproj
@@ -22,4 +22,11 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <ContentWithTargetPath Include="$(SolutionDir)\..\service\target\BFS.jar">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <TargetPath>BFS.jar</TargetPath>
+    </ContentWithTargetPath>
+  </ItemGroup>
+
 </Project>
